--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/assets/base.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rent a car express</title>
   </head>
   <body>
     <div id="app"></div>
